bisa render , tapi masih banyak bug

--- a/user_config.json
+++ b/user_config.json
@@ -1,3 +1,4 @@
 {
-    "last_output_folder": "C:/Users/rtauf/OneDrive/Pictures"
+    "last_output_folder": "C:/Users/rtauf/OneDrive/Pictures",
+    "output_path": "C:/Users/rtauf/Desktop/BotBuatanMamen/MAMENPRO_GUI"
 }
